[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dimon0476 <dmitry.fodorov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
